--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cloudpickle==0.8.0
 cycler==0.10.0
 dask==1.1.1
 decorator==4.3.2
+huffman==0.1.2
 kiwisolver==1.0.1
 matplotlib==3.0.2
 networkx==2.2
